added contractors endpoint

--- a/smtp_test_notebook.ipynb
+++ b/smtp_test_notebook.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "6060617f",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Login failed: wrong username/password or 2FA required\n"
+      "✅ SMTP login successful!\n"
      ]
     }
    ],
@@ -199,19 +199,20 @@
     "import smtplib, ssl\n",
     "\n",
     "smtp_server = \"smtp.gmail.com\"\n",
-    "port = 465  # SSL port\n",
+    "port = 465  # SSL port for Gmail / Google Workspace\n",
     "email = \"Accounts@tigerleads.ai\"\n",
-    "password = \"Adminaccounts123\"  # Use app password if 2FA enabled\n",
+    "password = \"pomo hlik nolr xiuj\"  # Google Workspace app password\n",
     "\n",
     "context = ssl.create_default_context()\n",
+    "\n",
     "try:\n",
     "    with smtplib.SMTP_SSL(smtp_server, port, context=context) as server:\n",
     "        server.login(email, password)\n",
-    "        print(\"SMTP login successful!\")\n",
+    "        print(\"✅ SMTP login successful!\")\n",
     "except smtplib.SMTPAuthenticationError:\n",
-    "    print(\"Login failed: wrong username/password or 2FA required\")\n",
+    "    print(\"❌ Login failed: wrong username/password or 2FA required\")\n",
     "except Exception as e:\n",
-    "    print(\"Error connecting to SMTP server:\", e)\n"
+    "    print(\"⚠️ Error connecting to SMTP server:\", e)\n"
    ]
   },
   {
